--- a/Review/Resource/oc_runtime.html
+++ b/Review/Resource/oc_runtime.html
@@ -19,13 +19,13 @@
 
 <body>
 	<div>
-		<h1>属性readwrite，readonly，assign，retain，copy，nonatomic 各是什么作用，在那种情况下用?</h1>
-		<h2>1). readwrite 是可读可写特性;需要生成getter方法和setter方法时
-			2). readonly 是只读特性 只会生成getter方法 不会生成setter方法 ;不希望属性在类外改变
-			3). assign 是赋值特性，setter方法将传入参数赋值给实例变量；仅设置变量时；前面没有*的就用asign，id和基础类型都可以；
-			4). retain 表示持有特性，用于指针变量，setter方法将传入参数先保留，再赋值，传入参数的retaincount会+1;retain主要用于非ARC，在ARC中retain和strong是一样的；
-			5). copy 表示赋值特性，setter方法将传入对象复制一份;需要完全一份新的变量时。
-			6).nonatomic 非原子操作，决定编译器生成的setter getter是否是原子操作，atomic表示多线程安全，一般使用nonatomic</h2>
+		<h1>SEL</h1>
+		<h2>OC在编译时，会根据每一个方法的名字、参数列表，生成一个唯一整形标识，这个标识就是SEL。
+			SEL是@selector类型，用来表示OC运行时的方法的名字。
+			typedef struct objc_selector *SEL
+			SEL本质是一个指向方法的指针(也是hash化的KEY值)，为了加快方法的查询速度。
+			可以在运行时添加新的selector，也可以在运行时获取已存在的selector。
+		</h2>
 		<br/>
 		
 		<h1>写一个setter方法用于完成@property (nonatomic,retain)NSString *name,写一个setter方法用于完成@property(nonatomic，copy)NSString *name</h1>
